// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TokensTable /> should be rendered - empty table 1`] = `
<div>
  <p
    class="text-muted text-center"
  >
    There are no tokens added yet.
  </p>
</div>
`;

exports[`<TokensTable /> should be rendered - filled table 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-hover"
    >
      <thead
        class="thead-light"
      >
        <tr>
          <th
            scope="col"
          >
            Name
          </th>
          <th
            aria-label="Actions"
            scope="col"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="align-middle"
          >
            foo
          </td>
          <td
            class="text-right"
          >
            <div
              class="btn-group"
              role="group"
            >
              <a
                class="btn btn-primary btn-sm"
                download=""
                href="/reforis/remote-access/api/tokens/1"
              >
                Download
              </a>
              <button
                class="btn btn-danger btn-sm"
                type="button"
              >
                Revoke
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td
            class="align-middle"
          >
            bar
          </td>
          <td
            class="text-right"
          >
            <span
              class="text-muted"
            >
              Access revoked
            </span>
          </td>
        </tr>
        <tr>
          <td
            class="align-middle"
          >
            baz
          </td>
          <td
            class="text-right"
          >
            <div
              class="spinner-border spinner-border-sm"
              role="status"
            >
              <span
                class="sr-only"
              />
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<TokensTable /> should display spinner while sending delete request 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-hover"
    >
      <thead
        class="thead-light"
      >
        <tr>
          <th
            scope="col"
          >
            Name
          </th>
          <th
            aria-label="Actions"
            scope="col"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="align-middle"
          >
            foo
          </td>
          <td
            class="text-right"
          >
            <div
              class="spinner-border spinner-border-sm"
              role="status"
            >
              <span
                class="sr-only"
              />
            </div>
          </td>
        </tr>
        <tr>
          <td
            class="align-middle"
          >
            bar
          </td>
          <td
            class="text-right"
          >
            <span
              class="text-muted"
            >
              Access revoked
            </span>
          </td>
        </tr>
        <tr>
          <td
            class="align-middle"
          >
            baz
          </td>
          <td
            class="text-right"
          >
            <div
              class="spinner-border spinner-border-sm"
              role="status"
            >
              <span
                class="sr-only"
              />
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
